--- a/MyLinx/MyLinx/packages.config
+++ b/MyLinx/MyLinx/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.1.66" targetFramework="net472" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="5.1.0" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.BootstrapIcons" version="5.1.0" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.BoxIcons" version="5.1.0" targetFramework="net472" />
@@ -38,4 +40,8 @@
   <package id="MahApps.Metro.IconPacks.VaadinIcons" version="5.1.0" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.WeatherIcons" version="5.1.0" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.Zondicons" version="5.1.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Tools" version="9.0.4" targetFramework="net472" developmentDependency="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
